Ini Tugas P03 Ade Safitri NIM 41215341

--- a/index.html.html
+++ b/index.html.html
@@ -38,5 +38,9 @@ img:hover{
     <P>Nama:Ade Safitri </P>
     <p>NIM:41215341</p>
     <button onclick="aleret('hello word javascript')"> javascript</button>
+    <button><a href="p03/Best Top 10 My Bestfriend.html">Table sederhana</a></button>
+    <button><a href="p03css/Top 5 Bestie.html">Tabel CSS</a></button>
+    <button><a href="p03css/style.css"></a></button>
+    <button><a href="p03jquery/Top 5 Bestie.html">Tabel Jquery</a></button>
 </body>
 </html>
