ini tugas From p04 Ade safitri

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ img:hover{
     opacity: 100%;
     box-shadow: 1px 1px 6px red;
 }
+a{
+    text-decoration: none;
+}
+button{
+    margin: 20px;
+    background-color: aqua;
+}
     </style>
 </head>
 <body>
@@ -43,5 +50,7 @@ img:hover{
     <button><a href="p03css/index.html"></a></button>
     <button><a href="p03jquery/index.html">Tabel Jquery</a></button>
     <button><a href="p03from-lv1/index.html">Formulir</a></button>
+    <button><a href="p04from-css/index.html">Formulir css</a></button>
+    <button><a href="p04from-renponsive/index.html">Formulir renponsive</a></button>
 </body>
 </html>
